20130830:
  + Makefile: slightly modified to match the changes in libcsoup

20130828: Version 3.0.1
  + Fixed a bug that displaying wrong file size; for example, 
    a file of 2973632284 bytes was displayed 2.01GB, not 2.77GB
  + Imporved quick scan in duration test.
  + A foolproof update while displaying language metadata.

20130809: Version 3.0.0
  + Most tests have been done so it's the time to release. 
    There are so many codes and features newly included.
    I reckon to it's proper to jump the version number.

20130808:
  + ezthumb.c: never fail the video_decode_xxx() functions.
    [BUG]: Otherwise in binding mode, alizee.rm la_lsla_bonita.wmv  
    SeeYa.mkv  shakira1.mp4 shakira2.mp4, ezthumb -b --opt-ffr on *,
    the last frame run out of la_lsla_bonita.wmv cause the index
    disordered in between clips

20130724:
  + ezthumb.c: remove the heuristic process because it's already integrated
    into the scan mode as default function.
  + ezthumb.c: since the scan mode is heuristically, the two-pass mode is 
    much less important now. Thus turned the two-pass mode to the tradition
    way to cut down the memory usage.

20130718:
  + video_dts_to_ms(): removed the offset adjustment to formatx->start_time
    because it made confusing and not consistent to other convert functions.

20130628: move to 2.2.0
  + Major update to support binding mode.

20120902: quickfix branch V2.1.10
  + ezgui.c: temporarily change the default codepage to UTF-8 to fix the
    file name issue. The problem is that ezthumb uses native codepage to 
    translate the file name, which came from the command line as the native
    form. However, the file name passed from GTK had been converted to UTF-8.
    When command line version works good, the GUI version failed.
    Temporarily changing the codepage to UTF-8 before calling ezthumb core
    functions, the MultiByteToWideChar() could work properly.

20120829: quickfix branch