@@ -1,7 +1,7 @@
 Begin4
 Title:          ezthumb
-Version:        3.0.1
-Entered-date:   2013-08-28
+Version:        3.0.2
+Entered-date:   2013-09-15
 Description:    A video thumbnail generator based on FFMPEG library.
                 The basic function is to sample screenshots from video files
                 and tile them into a single picture. It can also generate
@@ -10,9 +10,9 @@ Keywords:       ezthumb, thumbnail, screenshot, FFMPEG
 Author:	        "Andy Xuming" <xuming@users.sourceforge.net>
 Maintained-by:  "Andy Xuming" <xuming@users.sourceforge.net>
 Primary-site:   https://sourceforge.net/projects/ezthumb/
-                282K   ezthumb-3.0.1.tar.gz
-                12.4M  ezthumb-3.0.1-win-bin.tar.gz
-		1K     ezthumb-3.0.1.lsm
+                282K   ezthumb-3.0.2.tar.gz
+                12.4M  ezthumb-3.0.2-win-bin.tar.gz
+		1K     ezthumb-3.0.2.lsm
 Alternate-site: 
 Platforms:      Linux/XWindow Microsoft/Windows Win32
 Copying-policy: GPLv3+
